helloworld/helloworld-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  ports:
  - nodePort: 30345
    port: 8080
    name: http
    targetPort: 8080
  selector:
    app: helloworld
  type: LoadBalancer  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  selector:
    matchLabels:
      app: helloworld
      tier: api
  template:
    metadata:
      labels:
        app: helloworld
        tier: api
    spec:
      containers:
      - name: helloworld
        image: neranjana/helloworld:1.0
        ports:
        - containerPort: 8080
