helloworld/helloworld-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /helloworld
        backend:
          serviceName: productpage
          servicePort: 9080
---
